[project]
name = "proyect-goku"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.11"
dependencies = [
    "fsspec>=2024.10.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.2",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "pillow>=11.0.0",
    "pyarrow>=18.0.0",
    "ray>=2.39.0",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "setuptools>=75.6.0",
    "transformers>=4.46.3",
    "wheel>=0.45.1",
    "wordcloud>=1.9.4",
]
